config/mimimi.yaml
apiVersion: v1
kind: Service
metadata:
  name: mimimi
  labels:
    app: mimimi
spec:
  type: ClusterIP
  selector:
    app: mimimi
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mimimi
spec:
  selector:
    matchLabels:
      app: mimimi
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mimimi
    spec:
      containers:
      - name: mimimi
        image: gcr.io/ignasi-permanent-ffxxqcd8/mimimi:v0.1
        imagePullPolicy: Always
        ports:
        - name: http
          protocol: TCP
          containerPort: 4390
