config/slack.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: slack-api
spec:
  hosts:
  - slack.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: slack-api-tls
spec:
  hosts:
  - slack.com
  tls:
  - match:
    - port: 443
      sniHosts:
      - slack.com
    route:
    - destination:
        host: slack.com
